Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -55,5 +55,5 @@
   "dhp141:3": "trljanje tela pepelom, a ni sedenje nepomično, ",
   "dhp141:4": "ništa od toga ne pročisti onog ko sumnju prevladao nije. ",
   "dhp142:0": "",
-  "dhp142:1": "Iako raskošno obučen, "
+  "dhp142:1": "ako je smiren, obuzdan, u vrlini istrajan, "
 }
