Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -56,5 +56,6 @@
   "dhp141:4": "ništa od toga ne pročisti onog ko sumnju prevladao nije. ",
   "dhp142:0": "",
   "dhp142:1": "Iako raskošno obučen, ",
-  "dhp142:2": "ako je smiren, obuzdan, u vrlini istrajan, "
+  "dhp142:2": "ako je smiren, obuzdan, u vrlini istrajan, ",
+  "dhp142:3": "pred svakim bićem odložio štap, "
 }
