Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -58,5 +58,6 @@
   "dhp142:1": "Iako raskošno obučen, ",
   "dhp142:2": "ako je smiren, obuzdan, u vrlini istrajan, ",
   "dhp142:3": "pred svakim bićem odložio štap, ",
-  "dhp142:4": "taj je braman, asketa i monah. "
+  "dhp142:4": "taj je braman, asketa i monah. ",
+  "dhp143:1": "Teško je naći toga ko, skromnošću obuzdan, "
 }
