Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -60,5 +60,6 @@
   "dhp142:3": "pred svakim bićem odložio štap, ",
   "dhp142:4": "taj je braman, asketa i monah. ",
   "dhp143:1": "Teško je naći toga ko, skromnošću obuzdan, ",
-  "dhp143:2": "od prekora zazire "
+  "dhp143:2": "od prekora zazire ",
+  "dhp143:3": "kao što konj dobre pasmine "
 }
