--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -61,5 +61,6 @@
   "dhp142:4": "taj je braman, asketa i monah. ",
   "dhp143:1": "Teško je naći toga ko, skromnošću obuzdan, ",
   "dhp143:2": "od prekora zazire ",
-  "dhp143:3": "kao što konj dobre pasmine "
+  "dhp143:3": "kao što konj dobre pasmine ",
+  "dhp143:4": "od biča zazire. "
 }
