Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -62,5 +62,6 @@
   "dhp143:1": "Teško je naći toga ko, skromnošću obuzdan, ",
   "dhp143:2": "od prekora zazire ",
   "dhp143:3": "kao što konj dobre pasmine ",
-  "dhp143:4": "od biča zazire. "
+  "dhp143:4": "od biča zazire. ",
+  "dhp144:1": "Kao rasni konj kad pucne bič, "
 }
