Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -63,5 +63,6 @@
   "dhp143:2": "od prekora zazire ",
   "dhp143:3": "kao što konj dobre pasmine ",
   "dhp143:4": "od biča zazire. ",
-  "dhp144:1": "Kao rasni konj kad pucne bič, "
+  "dhp144:1": "Kao rasni konj kad pucne bič, ",
+  "dhp144:2": "tako marljivi, puni žara budite, "
 }
