Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -64,5 +64,6 @@
   "dhp143:3": "kao što konj dobre pasmine ",
   "dhp143:4": "od biča zazire. ",
   "dhp144:1": "Kao rasni konj kad pucne bič, ",
-  "dhp144:2": "tako marljivi, puni žara budite, "
+  "dhp144:2": "tako marljivi, puni žara budite, ",
+  "dhp144:3": "puni predanosti, vrline, istrajnosti i svesnosti, "
 }
