Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -67,5 +67,6 @@
   "dhp144:2": "tako marljivi, puni žara budite, ",
   "dhp144:3": "puni predanosti, vrline, istrajnosti i svesnosti, ",
   "dhp144:4": "istinu istražujući, ",
-  "dhp144:5": "ispravnog znanja i ponašanja, sabrani, "
+  "dhp144:5": "ispravnog znanja i ponašanja, sabrani, ",
+  "dhp144:6": "čitave te gomile patnje oslobodite se. "
 }
