--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -68,5 +68,6 @@
   "dhp144:3": "puni predanosti, vrline, istrajnosti i svesnosti, ",
   "dhp144:4": "istinu istražujući, ",
   "dhp144:5": "ispravnog znanja i ponašanja, sabrani, ",
-  "dhp144:6": "čitave te gomile patnje oslobodite se. "
+  "dhp144:6": "čitave te gomile patnje oslobodite se. ",
+  "dhp145:1": "Poljodelci kanalima usmeravaju vodu, "
 }
