Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -69,5 +69,6 @@
   "dhp144:4": "istinu istražujući, ",
   "dhp144:5": "ispravnog znanja i ponašanja, sabrani, ",
   "dhp144:6": "čitave te gomile patnje oslobodite se. ",
-  "dhp145:1": "Poljodelci kanalima usmeravaju vodu, "
+  "dhp145:1": "Poljodelci kanalima usmeravaju vodu, ",
+  "dhp145:2": "oružari tešu strele, "
 }
