--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -71,5 +71,6 @@
   "dhp144:6": "čitave te gomile patnje oslobodite se. ",
   "dhp145:1": "Poljodelci kanalima usmeravaju vodu, ",
   "dhp145:2": "oružari tešu strele, ",
-  "dhp145:3": "stolari drvo oblikuju, "
+  "dhp145:3": "stolari drvo oblikuju, ",
+  "dhp145:4": "a mudraci krote sami sebe. "
 }
