--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp146:0.1": "Kratka zbirka Budnih govora ",
-  "dhp146:0.2": "Reči mudrosti "
+  "dhp146:0.2": "Reči mudrosti ",
+  "dhp146:0.3": "Starost "
 }
