--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp146:0.1": "Kratka zbirka Budnih govora ",
   "dhp146:0.2": "Reči mudrosti ",
-  "dhp146:0.3": "Starost "
+  "dhp146:0.3": "Starost ",
+  "dhp146:1": "Otkuda smeh, otkuda radost, "
 }
