Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dhp146:0.3": "Starost ",
   "dhp146:1": "Otkuda smeh, otkuda radost, ",
   "dhp146:2": "kad svet bez prestanka gori? ",
-  "dhp146:3": "Mrakom mrklim obavijeni, "
+  "dhp146:3": "Mrakom mrklim obavijeni, ",
+  "dhp146:4": "zašto svetiljku ne tražite? "
 }
