Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp146:1": "Otkuda smeh, otkuda radost, ",
   "dhp146:2": "kad svet bez prestanka gori? ",
   "dhp146:3": "Mrakom mrklim obavijeni, ",
-  "dhp146:4": "zašto svetiljku ne tražite? "
+  "dhp146:4": "zašto svetiljku ne tražite? ",
+  "dhp147:1": "Pogledajte taj zavodljivi oblik, "
 }
