--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -6,5 +6,6 @@
   "dhp146:2": "kad svet bez prestanka gori? ",
   "dhp146:3": "Mrakom mrklim obavijeni, ",
   "dhp146:4": "zašto svetiljku ne tražite? ",
-  "dhp147:1": "Pogledajte taj zavodljivi oblik, "
+  "dhp147:1": "Pogledajte taj zavodljivi oblik, ",
+  "dhp147:2": "tu gomilu gnojnih rana, "
 }
