--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dhp146:3": "Mrakom mrklim obavijeni, ",
   "dhp146:4": "zašto svetiljku ne tražite? ",
   "dhp147:1": "Pogledajte taj zavodljivi oblik, ",
-  "dhp147:2": "tu gomilu gnojnih rana, "
+  "dhp147:2": "tu gomilu gnojnih rana, ",
+  "dhp147:3": "bolnu, ali planova prepunu; "
 }
