--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp147:1": "Pogledajte taj zavodljivi oblik, ",
   "dhp147:2": "tu gomilu gnojnih rana, ",
   "dhp147:3": "bolnu, ali planova prepunu; ",
-  "dhp147:4": "u njoj baš ničeg trajnoga nema. "
+  "dhp147:4": "u njoj baš ničeg trajnoga nema. ",
+  "dhp148:1": "Trošno je telo ovo, "
 }
