Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp147:2": "tu gomilu gnojnih rana, ",
   "dhp147:3": "bolnu, ali planova prepunu; ",
   "dhp147:4": "u njoj baš ničeg trajnoga nema. ",
-  "dhp148:1": "Trošno je telo ovo, "
+  "dhp148:1": "Trošno je telo ovo, ",
+  "dhp148:2": "leglo bolesti svakakvih, "
 }
