Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp147:4": "u njoj baš ničeg trajnoga nema. ",
   "dhp148:1": "Trošno je telo ovo, ",
   "dhp148:2": "leglo bolesti svakakvih, ",
-  "dhp148:3": "smradna gomila gnoja; "
+  "dhp148:3": "smradna gomila gnoja; ",
+  "dhp148:4": "život se zaista smrću okončava. "
 }
