Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -14,5 +14,6 @@
   "dhp148:2": "leglo bolesti svakakvih, ",
   "dhp148:3": "smradna gomila gnoja; ",
   "dhp148:4": "život se zaista smrću okončava. ",
-  "dhp149:1": "Te sive kosti posvuda razbacane, "
+  "dhp149:1": "Te sive kosti posvuda razbacane, ",
+  "dhp149:2": "k’o tikve u jesen; "
 }
