--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -15,5 +15,6 @@
   "dhp148:3": "smradna gomila gnoja; ",
   "dhp148:4": "život se zaista smrću okončava. ",
   "dhp149:1": "Te sive kosti posvuda razbacane, ",
-  "dhp149:2": "k’o tikve u jesen; "
+  "dhp149:2": "k’o tikve u jesen; ",
+  "dhp149:3": "kad ih vidi tako, "
 }
