Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp149:1": "Te sive kosti posvuda razbacane, ",
   "dhp149:2": "k’o tikve u jesen; ",
   "dhp149:3": "kad ih vidi tako, ",
-  "dhp149:4": "ko bi ih voleti mogao? "
+  "dhp149:4": "ko bi ih voleti mogao? ",
+  "dhp150:1": "Grad od kostiju postoji, "
 }
