--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dhp149:3": "kad ih vidi tako, ",
   "dhp149:4": "ko bi ih voleti mogao? ",
   "dhp150:1": "Grad od kostiju postoji, ",
-  "dhp150:2": "oblepljen mesom i krvlju, "
+  "dhp150:2": "oblepljen mesom i krvlju, ",
+  "dhp150:3": "u kojem su starost, smrt, "
 }
