Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -20,5 +20,6 @@
   "dhp149:4": "ko bi ih voleti mogao? ",
   "dhp150:1": "Grad od kostiju postoji, ",
   "dhp150:2": "oblepljen mesom i krvlju, ",
-  "dhp150:3": "u kojem su starost, smrt, "
+  "dhp150:3": "u kojem su starost, smrt, ",
+  "dhp150:4": "sujeta i obmana smešteni. "
 }
