Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -22,5 +22,6 @@
   "dhp150:2": "oblepljen mesom i krvlju, ",
   "dhp150:3": "u kojem su starost, smrt, ",
   "dhp150:4": "sujeta i obmana smešteni. ",
-  "dhp151:1": "I blistava kraljevska kočija propadne, "
+  "dhp151:1": "I blistava kraljevska kočija propadne, ",
+  "dhp151:2": "telo ostari takođe. "
 }
