Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -24,5 +24,6 @@
   "dhp150:4": "sujeta i obmana smešteni. ",
   "dhp151:1": "I blistava kraljevska kočija propadne, ",
   "dhp151:2": "telo ostari takođe. ",
-  "dhp151:3": "Ali Učenje ispravnih neprolazno je, "
+  "dhp151:3": "Ali Učenje ispravnih neprolazno je, ",
+  "dhp151:4": "tako dobri govore dobrima. "
 }
