Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp151:1": "I blistava kraljevska kočija propadne, ",
   "dhp151:2": "telo ostari takođe. ",
   "dhp151:3": "Ali Učenje ispravnih neprolazno je, ",
-  "dhp151:4": "tako dobri govore dobrima. "
+  "dhp151:4": "tako dobri govore dobrima. ",
+  "dhp152:1": "Onaj ko Učenje slabo razume, "
 }
