--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -26,5 +26,6 @@
   "dhp151:2": "telo ostari takođe. ",
   "dhp151:3": "Ali Učenje ispravnih neprolazno je, ",
   "dhp151:4": "tako dobri govore dobrima. ",
-  "dhp152:1": "Onaj ko Učenje slabo razume, "
+  "dhp152:1": "Onaj ko Učenje slabo razume, ",
+  "dhp152:2": "stari k’o dobro hranjen vo, "
 }
