Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp152:2": "stari k’o dobro hranjen vo, ",
   "dhp152:3": "mesa na njemu sve više i više, ",
   "dhp152:4": "ali ne i mudrosti. ",
-  "dhp153:1": "Kroz mnoge živote lutah saṃsārom, "
+  "dhp153:1": "Kroz mnoge živote lutah saṃsārom, ",
+  "dhp153:2": "tražeći, a ne nalazeći "
 }
