Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -33,5 +33,6 @@
   "dhp153:1": "Kroz mnoge živote lutah saṃsārom, ",
   "dhp153:2": "tražeći, a ne nalazeći ",
   "dhp153:3": "graditelja tela ovoga. ",
-  "dhp153:4": "Bolno je zaista preporađanje. "
+  "dhp153:4": "Bolno je zaista preporađanje. ",
+  "dhp154:1": "O graditelju, najzad te opazih! "
 }
