Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -34,5 +34,6 @@
   "dhp153:2": "tražeći, a ne nalazeći ",
   "dhp153:3": "graditelja tela ovoga. ",
   "dhp153:4": "Bolno je zaista preporađanje. ",
-  "dhp154:1": "O graditelju, najzad te opazih! "
+  "dhp154:1": "O graditelju, najzad te opazih! ",
+  "dhp154:2": "Nikad više kuću ovu graditi nećeš! "
 }
