--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dhp153:3": "graditelja tela ovoga. ",
   "dhp153:4": "Bolno je zaista preporađanje. ",
   "dhp154:1": "O graditelju, najzad te opazih! ",
-  "dhp154:2": "Nikad više kuću ovu graditi nećeš! "
+  "dhp154:2": "Nikad više kuću ovu graditi nećeš! ",
+  "dhp154:3": "Svaki ti oslonac nestade, "
 }
