Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp153:4": "Bolno je zaista preporađanje. ",
   "dhp154:1": "O graditelju, najzad te opazih! ",
   "dhp154:2": "Nikad više kuću ovu graditi nećeš! ",
-  "dhp154:3": "Svaki ti oslonac nestade, "
+  "dhp154:3": "Svaki ti oslonac nestade, ",
+  "dhp154:4": "slomljen je stub nosač, "
 }
