--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp154:1": "O graditelju, najzad te opazih! ",
   "dhp154:2": "Nikad više kuću ovu graditi nećeš! ",
   "dhp154:3": "Svaki ti oslonac nestade, ",
-  "dhp154:4": "slomljen je stub nosač, "
+  "dhp154:4": "slomljen je stub nosač, ",
+  "dhp154:5": "um do neuslovljenog dosegnu, "
 }
