--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp154:2": "Nikad više kuću ovu graditi nećeš! ",
   "dhp154:3": "Svaki ti oslonac nestade, ",
   "dhp154:4": "slomljen je stub nosač, ",
-  "dhp154:5": "um do neuslovljenog dosegnu, "
+  "dhp154:5": "um do neuslovljenog dosegnu, ",
+  "dhp154:6": "sve žudnje ugašene. "
 }
