Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -39,5 +39,6 @@
   "dhp154:3": "Svaki ti oslonac nestade, ",
   "dhp154:4": "slomljen je stub nosač, ",
   "dhp154:5": "um do neuslovljenog dosegnu, ",
-  "dhp154:6": "sve žudnje ugašene. "
+  "dhp154:6": "sve žudnje ugašene. ",
+  "dhp155:1": "Oni što u mladosti niti su vodili sveti život, "
 }
