--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp154:4": "slomljen je stub nosač, ",
   "dhp154:5": "um do neuslovljenog dosegnu, ",
   "dhp154:6": "sve žudnje ugašene. ",
-  "dhp155:1": "Oni što u mladosti niti su vodili sveti život, "
+  "dhp155:1": "Oni što u mladosti niti su vodili sveti život, ",
+  "dhp155:2": "niti imetak stekli, "
 }
