Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -41,5 +41,6 @@
   "dhp154:5": "um do neuslovljenog dosegnu, ",
   "dhp154:6": "sve žudnje ugašene. ",
   "dhp155:1": "Oni što u mladosti niti su vodili sveti život, ",
-  "dhp155:2": "niti imetak stekli, "
+  "dhp155:2": "niti imetak stekli, ",
+  "dhp155:3": "uzdišu k’o matore čaplje "
 }
