Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp154:6": "sve žudnje ugašene. ",
   "dhp155:1": "Oni što u mladosti niti su vodili sveti život, ",
   "dhp155:2": "niti imetak stekli, ",
-  "dhp155:3": "uzdišu k’o matore čaplje "
+  "dhp155:3": "uzdišu k’o matore čaplje ",
+  "dhp155:4": "što čuče kraj jezera bez ribe. "
 }
