--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp155:1": "Oni što u mladosti niti su vodili sveti život, ",
   "dhp155:2": "niti imetak stekli, ",
   "dhp155:3": "uzdišu k’o matore čaplje ",
-  "dhp155:4": "što čuče kraj jezera bez ribe. "
+  "dhp155:4": "što čuče kraj jezera bez ribe. ",
+  "dhp156:1": "Oni što u mladosti niti su vodili sveti život, "
 }
