Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -44,5 +44,6 @@
   "dhp155:2": "niti imetak stekli, ",
   "dhp155:3": "uzdišu k’o matore čaplje ",
   "dhp155:4": "što čuče kraj jezera bez ribe. ",
-  "dhp156:1": "Oni što u mladosti niti su vodili sveti život, "
+  "dhp156:1": "Oni što u mladosti niti su vodili sveti život, ",
+  "dhp156:2": "niti imetak stekli, "
 }
