--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp155:3": "uzdišu k’o matore čaplje ",
   "dhp155:4": "što čuče kraj jezera bez ribe. ",
   "dhp156:1": "Oni što u mladosti niti su vodili sveti život, ",
-  "dhp156:2": "niti imetak stekli, "
+  "dhp156:2": "niti imetak stekli, ",
+  "dhp156:3": "za prošlošću uzdišu odbačeni, "
 }
