Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp146-156_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp155:4": "što čuče kraj jezera bez ribe. ",
   "dhp156:1": "Oni što u mladosti niti su vodili sveti život, ",
   "dhp156:2": "niti imetak stekli, ",
-  "dhp156:3": "za prošlošću uzdišu odbačeni, "
+  "dhp156:3": "za prošlošću uzdišu odbačeni, ",
+  "dhp156:4": "ko odapete strele što promašiše cilj. "
 }
