--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -1,3 +1,4 @@
 {
-  "dhp157:0.1": "Kratka zbirka Budnih govora "
+  "dhp157:0.1": "Kratka zbirka Budnih govora ",
+  "dhp157:0.2": "Reči mudrosti "
 }
