--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp157:0.1": "Kratka zbirka Budnih govora ",
   "dhp157:0.2": "Reči mudrosti ",
-  "dhp157:0.3": "O samom sebi "
+  "dhp157:0.3": "O samom sebi ",
+  "dhp157:1": "Kome je do samog sebe stalo, "
 }
