Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp157:0.2": "Reči mudrosti ",
   "dhp157:0.3": "O samom sebi ",
   "dhp157:1": "Kome je do samog sebe stalo, ",
-  "dhp157:2": "nek dobro na sebe pazi, "
+  "dhp157:2": "nek dobro na sebe pazi, ",
+  "dhp157:3": "barem u jednom od tri dela noći "
 }
