--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -300,7 +300,7 @@
   "mn82:40.6": "Heutzutage vergnügst du dich mit den fünf Arten sinnlicher Erregung, mit denen du versorgt und ausgestattet bist. Aber gibt es eine Möglichkeit, sicherzustellen, ",
   "mn82:40.7": "dass du im nächsten Leben weiterhin mit den gleichen fünf Arten sinnlicher Erregung versorgt und ausgestattet sein und dich damit ebenfalls vergnügen wirst? Oder werden andere diesen Besitz benutzen, während du gemäß deiner Taten weiterziehst?“ ",
   "mn82:40.8": "„Es gibt keine Möglichkeit, sicherzustellen, dass ich mich im nächsten Leben weiterhin auf die gleiche Art vergnüge. ",
-  "mn82:40.10": "Vielmehr werden andere diesen Besitz benutzen, während ich gemäß deiner Taten weiterziehe.“ ",
+  "mn82:40.10": "Vielmehr werden andere diesen Besitz benutzen, während ich gemäß meiner Taten weiterziehe.“ ",
   "mn82:40.11": "„Das ist es, was der Buddha meinte, als er sagte: ",
   "mn82:40.12": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘“ ",
   "mn82:40.14": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, ",
