--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -309,7 +309,7 @@
   "mn82:41.1": "Du sagtest auch: ‚Die Welt ist voller Wollen, unersättlich, der Sklave des Verlangens.‘ ",
   "mn82:41.3": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
   "mn82:41.4": "„Was denkst du, großer König? ",
-  "mn82:41.5": "Du lebst in diesem reichen Land Kuru, ist es nicht so?“ ",
+  "mn82:41.5": "Du residierst in diesem reichen Land Kuru, ist es nicht so?“ ",
   "mn82:41.6": "„So ist es.“ ",
   "mn82:41.7": "„Was denkst du, großer König? ",
   "mn82:41.8": "Angenommen, ein vertrauenswürdiger und zuverlässiger Mann käme von Osten. ",
