--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -315,7 +315,7 @@
   "mn82:41.8": "Angenommen, ein vertrauenswürdiger und zuverlässiger Mann käme von Osten. ",
   "mn82:41.9": "Er begäbe sich zu dir und meldete: ",
   "mn82:41.10": "‚Bitte, großer König, du sollst wissen: Ich komme von Osten. ",
-  "mn82:41.11": "Dort sah ich ein großes Land, das erfolgreich und blühend war, dicht bevölkert und voller Menschen. ",
+  "mn82:41.11": "Dort sah ich ein großes Land, das erfolgreich und blühend ist, dicht bevölkert und voller Menschen. ",
   "mn82:41.12": "Sie haben viele Bataillone von Elefanten, Reitertruppen, Streitwagen und Fußsoldaten. ",
   "mn82:41.13": "Und es gibt reichlich Geld und Getreide, ",
   "mn82:41.14": "reichlich Goldmünzen und ungemünztes Gold, bearbeitet wie auch unbearbeitet, ",
