--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -326,7 +326,7 @@
   "mn82:41.19": "„Was denkst du, großer König? ",
   "mn82:41.20": "Dann käme ein vertrauenswürdiger und zuverlässiger Mann von Westen … ",
   "mn82:41.21": "von Norden … ",
-  "mn82:41.22": "aus Süden … ",
+  "mn82:41.22": "von Süden … ",
   "mn82:41.23": "oder vom andern Ufer des Meeres. ",
   "mn82:41.24": "Er begäbe sich zu dir und meldete einen gleichen Sachverhalt. ",
   "mn82:41.32": "Was würdest du tun?“ ",
