--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "mn113:0.1": "Mittlere Lehrreden 113 ",
-  "mn113:0.2": "Ein wahrer Mensch "
+  "mn113:0.2": "Ein wahrer Mensch ",
+  "mn113:1.1": "So habe ich es gehört: "
 }
