--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "mn113:0.1": "Mittlere Lehrreden 113 ",
   "mn113:0.2": "Ein wahrer Mensch ",
   "mn113:1.1": "So habe ich es gehört: ",
-  "mn113:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. "
+  "mn113:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
+  "mn113:1.3": "Da wandte sich der Buddha an die Mönche und Nonnen: "
 }
