--- a/translation/de/sabbamitta/sutta/an/an10/an10.192_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.192_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an10.192:0.3": "Die Lehre eines wahren Menschen ",
   "an10.192:1.1": "„Ich will euch die Lehre eines wahren Menschen und die Lehre eines unwahren Menschen lehren. ",
   "an10.192:1.2": "Hört zu … ",
-  "an10.192:1.3": "Und was ist die Lehre der unwahren Menschen? ",
+  "an10.192:1.3": "Und was ist die Lehre eines unwahren Menschen? ",
   "an10.192:1.4": "Lebende Geschöpfe töten … ",
   "an10.192:1.5": "falsche Ansicht. ",
   "an10.192:1.6": "Das nennt man die Lehre der unwahren Menschen. ",
