--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "mn113:1.3": "Da wandte sich der Buddha an die Mönche und Nonnen: ",
   "mn113:1.4": "„Mönche und Nonnen!“ ",
   "mn113:1.5": "„Ehrwürdiger Herr“, antworteten sie. ",
-  "mn113:1.6": "Der Buddha sagte: "
+  "mn113:1.6": "Der Buddha sagte: ",
+  "mn113:2.1": "„Ich will euch die Eigenschaften eines wahren Menschen und die Eigenschaften eines unwahren Menschen lehren. "
 }
