--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "mn113:2.1": "„Ich will euch die Eigenschaften eines wahren Menschen und die Eigenschaften eines unwahren Menschen lehren. ",
   "mn113:2.2": "Hört zu und gebraucht den Geist gut, ich werde sprechen.“ ",
   "mn113:2.3": "„Ja, Herr“, antworteten sie. ",
-  "mn113:2.4": "Der Buddha sagte: "
+  "mn113:2.4": "Der Buddha sagte: ",
+  "mn113:3.1": "„Und was ist eine Eigenschaft eines unwahren Menschen? "
 }
