Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "mn113:2.2": "Hört zu und gebraucht den Geist gut, ich werde sprechen.“ ",
   "mn113:2.3": "„Ja, Herr“, antworteten sie. ",
   "mn113:2.4": "Der Buddha sagte: ",
-  "mn113:3.1": "„Und was ist eine Eigenschaft eines unwahren Menschen? "
+  "mn113:3.1": "„Und was ist eine Eigenschaft eines unwahren Menschen? ",
+  "mn113:3.2": "Da ist ein unwahrer Mensch von einer bedeutenden Familie fortgezogen. "
 }
