Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "mn113:2.3": "„Ja, Herr“, antworteten sie. ",
   "mn113:2.4": "Der Buddha sagte: ",
   "mn113:3.1": "„Und was ist eine Eigenschaft eines unwahren Menschen? ",
-  "mn113:3.2": "Da ist ein unwahrer Mensch von einer bedeutenden Familie fortgezogen. "
+  "mn113:3.2": "Da ist ein unwahrer Mensch von einer bedeutenden Familie fortgezogen. ",
+  "mn113:3.3": "Er denkt: "
 }
