Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "mn113:3.1": "„Und was ist eine Eigenschaft eines unwahren Menschen? ",
   "mn113:3.2": "Da ist ein unwahrer Mensch von einer bedeutenden Familie fortgezogen. ",
   "mn113:3.3": "Er denkt: ",
-  "mn113:3.4": "‚Ich bin von einer bedeutenden Familie fortgezogen, nicht wie diese anderen Mönche und Nonnen.‘ "
+  "mn113:3.4": "‚Ich bin von einer bedeutenden Familie fortgezogen, nicht wie diese anderen Mönche und Nonnen.‘ ",
+  "mn113:3.5": "Und er verherrlicht sich deshalb selbst und setzt andere herab. "
 }
