--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "mn113:3.3": "Er denkt: ",
   "mn113:3.4": "‚Ich bin von einer bedeutenden Familie fortgezogen, nicht wie diese anderen Mönche und Nonnen.‘ ",
   "mn113:3.5": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
-  "mn113:3.6": "Das ist eine Eigenschaft eines unwahren Menschen. "
+  "mn113:3.6": "Das ist eine Eigenschaft eines unwahren Menschen. ",
+  "mn113:3.7": "Ein wahrer Mensch denkt: "
 }
