Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "mn113:3.4": "‚Ich bin von einer bedeutenden Familie fortgezogen, nicht wie diese anderen Mönche und Nonnen.‘ ",
   "mn113:3.5": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:3.6": "Das ist eine Eigenschaft eines unwahren Menschen. ",
-  "mn113:3.7": "Ein wahrer Mensch denkt: "
+  "mn113:3.7": "Ein wahrer Mensch denkt: ",
+  "mn113:3.8": "‚Nicht weil man von einer bedeutenden Familie fortgezogen ist gehen Gedanken voller Gier, Hass und Täuschung zu Ende. "
 }
