--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "mn113:3.5": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:3.6": "Das ist eine Eigenschaft eines unwahren Menschen. ",
   "mn113:3.7": "Ein wahrer Mensch denkt: ",
-  "mn113:3.8": "‚Nicht weil man von einer bedeutenden Familie fortgezogen ist gehen Gedanken voller Gier, Hass und Täuschung zu Ende. "
+  "mn113:3.8": "‚Nicht weil man von einer bedeutenden Familie fortgezogen ist gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
+  "mn113:3.9": "Selbst wenn jemand nicht von einer bedeutenden Familie fortgezogen ist "
 }
