Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "mn113:3.6": "Das ist eine Eigenschaft eines unwahren Menschen. ",
   "mn113:3.7": "Ein wahrer Mensch denkt: ",
   "mn113:3.8": "‚Nicht weil man von einer bedeutenden Familie fortgezogen ist gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
-  "mn113:3.9": "Selbst wenn jemand nicht von einer bedeutenden Familie fortgezogen ist, "
+  "mn113:3.9": "Selbst wenn jemand nicht von einer bedeutenden Familie fortgezogen ist, ",
+  "mn113:3.10": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, Ehre und Lob dafür.‘ "
 }
