--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "mn113:3.8": "‚Nicht weil man von einer bedeutenden Familie fortgezogen ist gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
   "mn113:3.9": "Selbst wenn jemand nicht von einer bedeutenden Familie fortgezogen ist, ",
   "mn113:3.10": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
-  "mn113:3.11": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seiner bedeutenden Familie nicht selbst oder setzt andere herab. "
+  "mn113:3.11": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seiner bedeutenden Familie nicht selbst oder setzt andere herab. ",
+  "mn113:3.12": "Das ist eine Eigenschaft eines wahren Menschen. "
 }
