Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -24,6 +24,6 @@
   "mn113:3.11": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seiner bedeutenden Familie nicht selbst oder setzt andere herab. ",
   "mn113:3.12": "Das ist eine Eigenschaft eines wahren Menschen. ",
   "mn113:4-6.1": "Weiterhin ist da ein unwahrer Mensch von einer von einer großen Familie fortgezogen … ",
-  "mn113:4-6.2": "von einer wohlhabenden Familie … ",
+  "mn113:4-6.2": "von einer wohlhabenden Familie fortgezogen … ",
   "mn113:4-6.3": "von einer äußerst reichen Familie … "
 }
