Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "mn113:3.12": "Das ist eine Eigenschaft eines wahren Menschen. ",
   "mn113:4-6.1": "Weiterhin ist da ein unwahrer Mensch von einer von einer großen Familie fortgezogen … ",
   "mn113:4-6.2": "von einer wohlhabenden Familie fortgezogen … ",
-  "mn113:4-6.3": "von einer äußerst reichen Familie fortgezogen. "
+  "mn113:4-6.3": "von einer äußerst reichen Familie fortgezogen. ",
+  "mn113:4-6.4": "Er denkt: "
 }
