Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "mn113:4-6.1": "Weiterhin ist da ein unwahrer Mensch von einer von einer großen Familie fortgezogen … ",
   "mn113:4-6.2": "von einer wohlhabenden Familie fortgezogen … ",
   "mn113:4-6.3": "von einer äußerst reichen Familie fortgezogen. ",
-  "mn113:4-6.4": "Er denkt: "
+  "mn113:4-6.4": "Er denkt: ",
+  "mn113:4-6.5": "‚Ich bin von einer äußerst reichen Familie fortgezogen, nicht wie diese anderen Mönche und Nonnen.‘ "
 }
