Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "mn113:4-6.5": "‚Ich bin von einer äußerst reichen Familie fortgezogen, nicht wie diese anderen Mönche und Nonnen.‘ ",
   "mn113:4-6.6": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:4-6.7": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
-  "mn113:4-6.8": "Ein wahrer Mensch denkt: "
+  "mn113:4-6.8": "Ein wahrer Mensch denkt: ",
+  "mn113:4-6.9": "‚Nicht weil man von einer äußerst reichen Familie fortgezogen ist, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. "
 }
