Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "mn113:4-6.6": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:4-6.7": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
   "mn113:4-6.8": "Ein wahrer Mensch denkt: ",
-  "mn113:4-6.9": "‚Nicht weil man von einer äußerst reichen Familie fortgezogen ist, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. "
+  "mn113:4-6.9": "‚Nicht weil man von einer äußerst reichen Familie fortgezogen ist, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
+  "mn113:4-6.10": "Selbst wenn jemand nicht von einer äußerst reichen Familie fortgezogen ist, "
 }
