--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "mn113:4-6.8": "Ein wahrer Mensch denkt: ",
   "mn113:4-6.9": "‚Nicht weil man von einer äußerst reichen Familie fortgezogen ist, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
   "mn113:4-6.10": "Selbst wenn jemand nicht von einer äußerst reichen Familie fortgezogen ist, ",
-  "mn113:4-6.11": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ "
+  "mn113:4-6.11": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
+  "mn113:4-6.12": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seiner äußerst reichen Familie nicht selbst oder setzt andere herab. "
 }
