Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "mn113:4-6.10": "Selbst wenn jemand nicht von einer äußerst reichen Familie fortgezogen ist, ",
   "mn113:4-6.11": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
   "mn113:4-6.12": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seiner äußerst reichen Familie nicht selbst oder setzt andere herab. ",
-  "mn113:4-6.13": "Auch das ist eine Eigenschaft eines wahren Menschen. "
+  "mn113:4-6.13": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
+  "mn113:7.1": "Weiterhin ist da ein unwahrer Mensch namhaft und berühmt. "
 }
