Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -37,5 +37,6 @@
   "mn113:4-6.12": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seiner äußerst reichen Familie nicht selbst oder setzt andere herab. ",
   "mn113:4-6.13": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
   "mn113:7.1": "Weiterhin ist da ein unwahrer Mensch namhaft und berühmt. ",
-  "mn113:7.2": "Er denkt: "
+  "mn113:7.2": "Er denkt: ",
+  "mn113:7.3": "‚Ich bin namhaft und berühmt. Diese anderen Mönche und Nonnen sind unbekannt und unbedeutend.‘ "
 }
