Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "mn113:7.1": "Weiterhin ist da ein unwahrer Mensch namhaft und berühmt. ",
   "mn113:7.2": "Er denkt: ",
   "mn113:7.3": "‚Ich bin namhaft und berühmt. Diese anderen Mönche und Nonnen sind unbekannt und unbedeutend.‘ ",
-  "mn113:7.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. "
+  "mn113:7.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
+  "mn113:7.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. "
 }
