--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "mn113:7.3": "‚Ich bin namhaft und berühmt. Diese anderen Mönche und Nonnen sind unbekannt und unbedeutend.‘ ",
   "mn113:7.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:7.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
-  "mn113:7.6": "Ein wahrer Mensch denkt: "
+  "mn113:7.6": "Ein wahrer Mensch denkt: ",
+  "mn113:7.7": "‚Nicht weil man namhaft und bedeutend ist, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. "
 }
