--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "mn113:7.9": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
   "mn113:7.10": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seines Ruhms nicht selbst oder setzt andere herab. ",
   "mn113:7.11": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
-  "mn113:8.1": "Weiterhin erhält da ein unwahrer Mensch Roben, Almosen, Unterkunft sowie Arznei und Krankenversorgung. "
+  "mn113:8.1": "Weiterhin erhält da ein unwahrer Mensch Roben, Almosen, Unterkunft sowie Arznei und Krankenversorgung. ",
+  "mn113:8.2": "Er denkt: "
 }
