--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -52,5 +52,6 @@
   "mn113:8.3": "‚Ich erhalte Roben, Almosen, Unterkunft sowie Arznei und Krankenversorgung, nicht wie diese anderen Mönche und Nonnen.‘ ",
   "mn113:8.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:8.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
-  "mn113:8.6": "Ein wahrer Mensch denkt: "
+  "mn113:8.6": "Ein wahrer Mensch denkt: ",
+  "mn113:8.7": "‚Nicht weil man materiellen Besitz erhält, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. "
 }
