--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "mn113:8.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:8.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
   "mn113:8.6": "Ein wahrer Mensch denkt: ",
-  "mn113:8.7": "‚Nicht weil man materiellen Besitz erhält, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. "
+  "mn113:8.7": "‚Nicht weil man materiellen Besitz erhält, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
+  "mn113:8.8": "Selbst wenn jemand keine Roben, kein Almosen, keine Unterkunft und keine Arznei und Krankenversorgung erhält, "
 }
