--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "mn113:8.6": "Ein wahrer Mensch denkt: ",
   "mn113:8.7": "‚Nicht weil man materiellen Besitz erhält, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
   "mn113:8.8": "Selbst wenn jemand keine Roben, kein Almosen, keine Unterkunft und keine Arznei und Krankenversorgung erhält, ",
-  "mn113:8.9": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ "
+  "mn113:8.9": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
+  "mn113:8.10": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seines materiellen Besitzes nicht selbst oder setzt andere herab. "
 }
